/* Copyright (C) 2025 Interactive Brokers LLC. All rights reserved. This code is subject to the terms
 * and conditions of the IB API Non-Commercial License or the IB API Commercial License, as applicable. */

syntax = "proto3";

package protobuf;

import "Contract.proto";

option java_outer_classname = "PositionMultiProto";
option java_package = "com.ib.client.protobuf";
option csharp_namespace = "IBApi.protobuf";

message PositionMulti {
    optional int32 reqId = 1;
    optional string account = 2;
	optional Contract contract = 3;
    optional string position = 4;
    optional double avgCost = 5;
    optional string modelCode = 6;
}
